add: get database mapping api
